<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="120dp">

    <ImageView
            android:id="@+id/movie_image"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/movie_image"
            android:scaleType="centerCrop"/>
    <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/movie_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_image"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <TextView
            android:id="@+id/textView2"
            android:text="@string/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/movie_release_date"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"/>
    <TextView
            android:id="@+id/textView4"
            android:text="@string/popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/movie_popularity"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/movie_release_date"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"/>
</androidx.constraintlayout.widget.ConstraintLayout>