<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:foreground="#5f000000"
            android:contentDescription="@string/backdrop_detail"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:id="@+id/image_movie"
            android:layout_width="150dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/movie_image"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/title_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/image_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_movie"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/popularity_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/popularity"
            app:layout_constraintTop_toBottomOf="@id/title_movie_detail"
            app:layout_constraintStart_toStartOf="@id/title_movie_detail"
            app:layout_constraintEnd_toStartOf="@id/popularity_value_detail"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/popularity_value_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/title_movie_detail"
            app:layout_constraintEnd_toEndOf="@id/title_movie_detail"
            app:layout_constraintStart_toEndOf="@id/popularity_title_detail"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/vote_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/vote"
            app:layout_constraintTop_toBottomOf="@id/popularity_title_detail"
            app:layout_constraintStart_toStartOf="@id/title_movie_detail"
            app:layout_constraintEnd_toStartOf="@id/vote_value_detail"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/vote_value_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/popularity_value_detail"
            app:layout_constraintEnd_toEndOf="@id/title_movie_detail"
            app:layout_constraintStart_toEndOf="@id/vote_title_detail"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/release_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/vote_title_detail"
            app:layout_constraintStart_toStartOf="@id/title_movie_detail"
            app:layout_constraintEnd_toStartOf="@id/release_value_detail"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/release_value_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/vote_value_detail"
            app:layout_constraintEnd_toEndOf="@id/title_movie_detail"
            app:layout_constraintStart_toEndOf="@id/release_title_detail"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/image_movie"
            app:layout_constraintStart_toStartOf="@id/image_movie"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/overview_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/overview_title"
            app:layout_constraintStart_toStartOf="@id/overview_title"
            app:layout_constraintEnd_toEndOf="@id/title_movie_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>